--- a/TreasureFilter/style/main.css
+++ b/TreasureFilter/style/main.css
@@ -887,8 +887,8 @@ body.login_page .login_floor {
 }
 .content_warp.goods_menu .filter .filter_sub_catagory dl dt:hover,
 .content_warp.goods_menu .filter .filter_sub_catagory dl dt.selected {
-    color: #e72e00;
-    text-decoration: underline;
+    /*color: #e72e00;
+    text-decoration: underline;*/
 }
 .content_warp.goods_menu .filter .filter_sub_catagory dl dd {
     display: inline-block;
@@ -2528,4 +2528,41 @@ body.login_page .login_floor {
 .item_goods_info .tags p {
     font-size: 12px; padding: 0 5px; border-radius: 2px; color: #fff;
     display: inline-block; text-indent: 0; margin: 0 2px;
+}
+
+
+.top-nav{
+    list-style: none;
+}
+.top-nav li{
+    width: 81px;
+    height: 22px;
+    float: left;
+    border: 1px solid black;
+}
+.top-nav li a{
+    text-decoration: none;
+    text-align: center;
+    color: #333;
+    display: block;
+}
+.top-nav li a:hover {
+    background: gray;
+    color: white;
+}
+.top-nav li ul{
+    display: none;
+    position: relative;
+}
+.top-nav li:hover ul{
+    display: block;
+}
+.top-nav li:hover ul li ul {
+    display: none;
+}
+.top-nav li ul li:hover ul {
+    display: block;
+    position: absolute;
+    top: 0px;
+    left: 80px;
 }
