--- a/css/main.css
+++ b/css/main.css
@@ -82,7 +82,7 @@
     cursor: pointer;
 }
 .checkbox.checkboxed {
-    background-image: url("../images/check-box.png");
+    background-image: url("images/check-box.png");
     background-repeat: no-repeat;
     background-position: center;
     border: 1px solid #333;
@@ -110,17 +110,17 @@
     _display: inline;
 }
 .hammer{
-    background-image: url("../images/hammer.png");
+    background-image: url("images/hammer.png");
 }
 .buyer_icon{
-    background-image: url("../images/buyer.png");
+    background-image: url("images/buyer.png");
 }
 .buyer_icon_hover{
     font-size: 12px;
     margin-left: 10px;
     background-repeat: no-repeat;
     padding: 3px 0px 3px 28px;
-    background-image: url("../images/buyer_hover.png");
+    background-image: url("images/buyer_hover.png");
 }
 .min_img {
     height: 150px;
@@ -149,7 +149,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-image: url("../images/loading.gif");
+    background-image: url("images/loading.gif");
     background-repeat: no-repeat;
     background-position: center;
 }
@@ -178,7 +178,7 @@
     right: 0;
     display: none;
     bottom: 0;
-    background-image: url("../images/white_opacity_3.png");
+    background-image: url("images/white_opacity_3.png");
 }
 .follow {
     display: inline-block;
@@ -191,11 +191,11 @@
     font-size: 12px;
 }
 .follow.is-follow {
-    background-image: url("../images/follow-mini.png");
+    background-image: url("images/follow-mini.png");
     color: #FF4747;
 }
 .follow.is-follow-no {
-    background-image: url("../images/follow.png");
+    background-image: url("images/follow.png");
     color: #afafaf;
 }
 .open_allow {
@@ -232,7 +232,7 @@ body.content_page {
 
 }
 body.login_page {
-    background-image: url("../images/content_bg.jpg");
+    background-image: url("images/content_bg.jpg");
 }
 body.login_page .login_page_top {
     height: 139px;
@@ -241,7 +241,7 @@ body.login_page .login_page_top {
     right: 0;
     left: 0;
     z-index: 1;
-    background-image: url("../images/logo_top.png");
+    background-image: url("images/logo_top.png");
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -252,7 +252,7 @@ body.login_page .login_floor {
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: url("../images/logo_foor.jpg");
+    background-image: url("images/logo_foor.jpg");
 }
 
 @keyframes tipsShow {
@@ -333,7 +333,7 @@ body.login_page .login_floor {
     color: #000;
 }
 .olts_red .bmp_pop_mark {
-    background-image: url("../images/black_opacity_3.png");
+    background-image: url("images/black_opacity_3.png");
     background-repeat: repeat;
 }
 .olts_red .bmp_pop_mark .bmp_pop {
@@ -430,13 +430,13 @@ body.login_page .login_floor {
     height: 30px;
     top: -15px;
     right: -15px;
-    background-image: url("../images/cancel.png");
+    background-image: url("images/cancel.png");
     cursor: pointer;
     background-repeat: no-repeat;
     background-position: center;
 }
 .olts_red .bmp_pop_mark .bmp_pop .bmp_pop_close:hover {
-    background-image: url("../images/cancel_hover.png");
+    background-image: url("images/cancel_hover.png");
 }
 .olts_red .bmp_pop_mark .bmp_pop .bmp_pop_footer a {
     color: #fff;
@@ -453,7 +453,7 @@ body.login_page .login_floor {
 }
 .warp.login_warp {
     width: 910px;
-    background-image: url("../images/logo_bg.jpg");
+    background-image: url("images/logo_bg.jpg");
     position: relative;
     min-height: 800px;
     margin-top: -169px;
@@ -479,7 +479,7 @@ body.login_page .login_floor {
 .warp .server-block h2 {
     font-size: 16px;
     height: 40px;
-    background-image: url("../images/select-bg.png");
+    background-image: url("images/select-bg.png");
     background-repeat: no-repeat;
     background-position: 0 bottom;
     width: 454px;
@@ -581,7 +581,7 @@ body.login_page .login_floor {
     width: 283px;
     height: 70px;
     float: left;
-    background-image: url("../images/logo.png");
+    background-image: url("images/logo.png");
     background-repeat: no-repeat;
     background-position: center;
     text-indent: -999em;
@@ -652,7 +652,7 @@ body.login_page .login_floor {
     margin-left: 10px;
 }
 .warp .top-menu .logout {
-    background-image: url("../images/logo_jishi.png");
+    background-image: url("images/logo_jishi.png");
     background-repeat: no-repeat;
     background-position: top;
     float: right;
@@ -755,7 +755,7 @@ body.login_page .login_floor {
     animation: hideInput 0.3s 0s linear;
 }
 .content_warp.goods_menu .link_list .search_box a.btn {
-    background-image: url("../images/icon_search.png");
+    background-image: url("images/icon_search.png");
     border: 0 none;
     background-color: transparent;
     width: 28px;
@@ -819,13 +819,13 @@ body.login_page .login_floor {
     float: left;
     width: 14px;
     height: 14px;
-    background-image: url("../images/close.png");
+    background-image: url("images/close.png");
     margin: 3px 0 0 8px;
     float: right;
 }
 .content_warp.goods_menu .filter .filter_top span.catagory:hover i,
 .content_warp.goods_menu .filter .filter_top span.catagory.selected i {
-    background-image: url("../images/close_hover.png");
+    background-image: url("images/close_hover.png");
     -webkit-transition: background-image 0.2s;
     -moz-transition: background-image 0.2s;
     -ms-transition: background-image 0.2s;
@@ -833,7 +833,7 @@ body.login_page .login_floor {
     transition: background-image 0.2s;
 }
 .content_warp.goods_menu .filter .filter_sub_catagory {
-    background-image: url("../images/filter_body.png");
+    background-image: url("images/filter_body.png");
     background-repeat: repeat-y;
     position: relative;
     color: #666;
@@ -845,19 +845,19 @@ body.login_page .login_floor {
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_top,
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_floor {
     height: 13px;
-    background-image: url("../images/filter_head.jpg");
+    background-image: url("images/filter_head.jpg");
     background-repeat: no-repeat;
 }
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_top.filter_floor,
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_floor.filter_floor {
-    background-image: url("../images/filter_floor.jpg");
+    background-image: url("images/filter_floor.jpg");
 }
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_mark {
     position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: url("../images/filter_mark.png");
+    background-image: url("images/filter_mark.png");
     height: 38px;
     z-index: 1;
 }
@@ -925,16 +925,16 @@ body.login_page .login_floor {
     z-index: 2;
 }
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_control:hover.open {
-    background-image: url("../images/filter-control-open-hover.png");
+    background-image: url("images/filter-control-open-hover.png");
 }
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_control:hover.close {
-    background-image: url("../images/filter-control-close-hover.png");
+    background-image: url("images/filter-control-close-hover.png");
 }
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_control.open {
-    background-image: url("../images/filter-control-open.png");
+    background-image: url("images/filter-control-open.png");
 }
 .content_warp.goods_menu .filter .filter_sub_catagory .filter_control.close {
-    background-image: url("../images/filter-control-close.png");
+    background-image: url("images/filter-control-close.png");
 }
 .content_warp.goods_menu .filter .filter_param_item {
     margin-top: 14px;
@@ -967,17 +967,17 @@ body.login_page .login_floor {
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 10px;
-    background-image: url("../images/default.png");
+    background-image: url("images/default.png");
 }
 .content_warp.goods_menu .filter .filter_param_item li.selected {
     border-bottom: 2px solid #E72E00;
     color: #e72e00;
 }
 .content_warp.goods_menu .filter .filter_param_item li.selected.asc i {
-    background-image: url("../images/asc.png");
+    background-image: url("images/asc.png");
 }
 .content_warp.goods_menu .filter .filter_param_item li.selected.desc i {
-    background-image: url("../images/desc.png");
+    background-image: url("images/desc.png");
 }
 .content_warp .goods_item_con,
 .content_warp .get_goods {
@@ -1038,7 +1038,7 @@ body.login_page .login_floor {
     height: 130px;
     padding-top: 40px;
     margin: 5px auto 17px auto;
-    background-image: url("../images/goods_bg.png");
+    background-image: url("images/goods_bg.png");
 }
 .content_warp .goods_item_con .goods_block .goods_info .goods_img .tags,
 .content_warp .get_goods .goods_block .goods_info .goods_img .tags{
@@ -1134,11 +1134,11 @@ body.login_page .login_floor {
 }
 .content_warp .goods_item_con .goods_block:hover .hammer,
 .content_warp .get_goods .goods_block:hover .hammer {
-    background-image: url("../images/hammer_hover.png");
+    background-image: url("images/hammer_hover.png");
 }
 .content_warp .goods_item_con .goods_block:hover .buyer_icon,
 .content_warp .get_goods .goods_block:hover .buyer_icon {
-    background-image: url("../images/buyer_hover.png");
+    background-image: url("images/buyer_hover.png");
 }
 .content_warp .goods_item_con .goods_block:hover .goods_info .goods_price,
 .content_warp .get_goods .goods_block:hover .goods_info .goods_price {
@@ -1215,7 +1215,7 @@ body.login_page .login_floor {
     background-position: center;
     background-color: transparent;
     cursor: pointer;
-    background-image: url("../images/go_index.jpg");
+    background-image: url("images/go_index.jpg");
     vertical-align: middle;
     margin-left: 20px;
 }
@@ -1274,7 +1274,7 @@ body.login_page .login_floor {
     width: 109px;
     height: 45px;
     margin: 0 10px;
-    background-image: url("../images/links.png");
+    background-image: url("images/links.png");
     background-repeat: no-repeat;
     display: inline-block;
     float: left;
@@ -1315,7 +1315,7 @@ body.login_page .login_floor {
     left: 0;
     top: 0;
     bottom: 0;
-    background-image: url("../images/black_opacity_6.png");
+    background-image: url("images/black_opacity_6.png");
     z-index: 12;
     display: none;
 }
@@ -1360,13 +1360,13 @@ body.login_page .login_floor {
     height: 30px;
     right: -15px;
     top: -15px;
-    background-image: url("../images/cancel.png");
+    background-image: url("images/cancel.png");
     cursor: pointer;
     background-repeat: no-repeat;
     background-position: center;
 }
 .pop_mark .pop .cancel_btn:hover {
-    background-image: url("../images/cancel_hover.png");
+    background-image: url("images/cancel_hover.png");
 }
 .pop_mark .pop .goods_con .goods_info {
     border-bottom: 1px solid #ddd;
@@ -1527,7 +1527,7 @@ body.login_page .login_floor {
     left: 0;
     top: 0;
     bottom: 0;
-    background-image: url("../images/black_opacity_6.png");
+    background-image: url("images/black_opacity_6.png");
     z-index: 100;
     display: none;
 }
@@ -2000,7 +2000,7 @@ body.login_page .login_floor {
     *display: inline;
 }
 .auction_page .auction_info .auction_item .item_goods_info .goods_price_list .goods_price .btn.auction_btn {
-    background-image: url("../images/hammer_.png");
+    background-image: url("images/hammer_.png");
     background-repeat: no-repeat;
     background-position: 24px center;
     text-indent: 30px;
@@ -2047,7 +2047,7 @@ body.login_page .login_floor {
     line-height: 34px;
 }
 .auction_page .auction_info .auction_item .item_goods_info .goods_price_one .goods_price .btn.auction_btn {
-    background-image: url("../images/hammer_.png");
+    background-image: url("images/hammer_.png");
     background-repeat: no-repeat;
     background-position: 24px center;
     text-indent: 30px;
@@ -2201,19 +2201,19 @@ body.login_page .login_floor {
     width: 980px;
     height: 13px;
     display: block;
-    background-image: url("../images/filter_head.jpg");
+    background-image: url("images/filter_head.jpg");
 }
 .all_server .all_server_floor {
     width: 980px;
     height: 13px;
     display: block;
-    background-image: url("../images/filter_floor.jpg");
+    background-image: url("images/filter_floor.jpg");
 }
 .all_server .all_server_body {
     width: 960px;
     min-height: 100px;
     padding: 10px;
-    background-image: url("../images/filter_body.png");
+    background-image: url("images/filter_body.png");
 }
 .all_server .all_server_body .btn_list a {
     margin: 0 15px;
@@ -2459,7 +2459,7 @@ body.login_page .login_floor {
 .change-server-warp .area-block h2, .change-server-warp .server-block h2{
     font-size: 16px;
     height: 40px;
-    background-image: url("../images/select-bg.png");
+    background-image: url("images/select-bg.png");
     background-repeat: no-repeat;
     background-position: 0 bottom;
     background-size: contain;
@@ -2532,7 +2532,7 @@ body.login_page .login_floor {
     position: fixed;
     top: 35%;
     left: 44%;
-    background-image: url("../images/developer.png");
+    background-image: url("images/developer.png");
 }
 .pop_mark .qrCode .cancel_btn {
     position: absolute;
@@ -2540,13 +2540,13 @@ body.login_page .login_floor {
     height: 30px;
     right: -15px;
     top: -15px;
-    background-image: url("../images/cancel.png");
+    background-image: url("images/cancel.png");
     cursor: pointer;
     background-repeat: no-repeat;
     background-position: center;
 }
 .pop_mark .qrCode .cancel_btn:hover {
-    background-image: url("../images/cancel_hover.png");
+    background-image: url("images/cancel_hover.png");
 }
 
 .web_bg{
